--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -6,4 +6,23 @@ body
 }
 
 
+footer
+{
+    color: #ffffff;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 25px;
+    background: #1b1b1b;
+}
 
+.profil-picture
+{
+    width: 250px;
+    height: 200px;
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    -o-border-radius: 100px;
+}
